--- a/styles/basic.css
+++ b/styles/basic.css
@@ -104,3 +104,39 @@
   .w-full{
     width: 100%;
   }
+
+
+
+
+
+
+
+
+
+
+  /* markdown标题样式更改 */
+.markdown-body h1,
+.markdown-body h2,
+.markdown-body h3,
+.markdown-body h4{
+  /* margin-inline-start:-1vw; */
+  /* padding-inline-start:1vw; */
+  /* border-inline-start: 0.35vw solid #0969da; */
+  /* 提升移动端体验 */
+  margin-inline-start: -12px;
+  padding-inline-start: 12px;
+  border-inline-start: 4.41px solid #1e80ff;
+}
+.markdown-body h5,
+.markdown-body h6{
+  /* margin-inline-start:-1vw;
+  padding-inline-start:1.35vw; */
+  /* 提升移动端体验 */
+  margin-inline-start: -12px;
+  padding-inline-start: 16.4px solid #1e80ff;
+}
+
+/* markdown样式更改 取消#符号 */
+.markdown-body .header-anchor{
+  display: none;
+}
