--- a/styles/basic.css
+++ b/styles/basic.css
@@ -116,38 +116,51 @@
   .w-75{
     width: 75vw;
   }
+  .w-85{
+    width: 85vw;
+  }
 
 .h-2screen{
   height: 200vh;
 }
 
+.pb-15{
+  padding-bottom: 15px;
+}
+.h-5{
+  height: 5vh;
+}
 
 
-
-
+.dark{
+  background-color: #0d1117;
+}
 
 
   /* markdown标题样式更改 */
-.markdown-body h1,
-.markdown-body h2,
-.markdown-body h3,
-.markdown-body h4{
-  /* margin-inline-start:-1vw; */
-  /* padding-inline-start:1vw; */
-  /* border-inline-start: 0.35vw solid #0969da; */
-  /* 提升移动端体验 */
-  margin-inline-start: -12px;
-  padding-inline-start: 12px;
-  border-inline-start: 4.41px solid #1e80ff;
-}
-.markdown-body h5,
-.markdown-body h6{
-  /* margin-inline-start:-1vw;
-  padding-inline-start:1.35vw; */
-  /* 提升移动端体验 */
-  margin-inline-start: -12px;
-  padding-inline-start: 16.4px solid #1e80ff;
-}
+  .markdown-body h1,
+  .markdown-body h2,
+  .markdown-body h3,
+  .markdown-body h4 {
+    margin-inline-start: -0.75rem;
+    padding-inline-start: 0.75rem;
+    border-inline-start: 0.275rem solid #1e80ff;
+  }
+  
+  .dark .markdown-body h1,
+  .dark .markdown-body h2,
+  .dark .markdown-body h3,
+  .dark .markdown-body h4,
+  .dark .markdown-body h5,
+  .dark .markdown-body h6{
+    border-inline-start: 0.41rem solid goldenrod;
+  }
+  .markdown-body h5,
+  .markdown-body h6 {
+    margin-inline-start: -0.75rem;
+    padding-inline-start: 1rem;
+    border-inline-start: 0.41rem solid #1e80ff;
+  }
 
 /* markdown样式更改 取消#符号 */
 .markdown-body .header-anchor{
