--- a/styles/basic.css
+++ b/styles/basic.css
@@ -134,6 +134,10 @@
   background-color: #0d1117;
 }
 
+.markdown-body h1{
+  margin: 0 0 !important;
+  margin-inline-start: -0.75rem !important;
+}
 
   /* markdown标题样式更改 */
   .markdown-body h1,
@@ -142,7 +146,7 @@
   .markdown-body h4 {
     margin-inline-start: -0.75rem;
     padding-inline-start: 0.75rem;
-    border-inline-start: 0.275rem solid skyblue;
+    border-inline-start: 0.275rem solid #34495e;
   }
   
   .dark .markdown-body h1,
@@ -157,7 +161,7 @@
   .markdown-body h6 {
     margin-inline-start: -0.75rem;
     padding-inline-start: 1rem;
-    border-inline-start: 0.41rem solid skyblue;
+    border-inline-start: 0.41rem solid #34495e;
   }
 
 /* markdown样式更改 取消#符号 */
